# stitch-poc

./: .git-sync-last-report  .git-sync-last-status.md  .git-sync-log  .git-sync-report  .git-sync-status.md  .gitignore  .last-sync  .sync-last-result.json  .sync-log  .sync-log.md  .sync-status  .sync-status.md  Mac接力操作指南.md  README-SYNC.md  README.md  SYNC_PLAN.md  _test.dxf  _test_fixed.dxf  _第一阶段_实战测试.py  build_apk.sh  git-sync-log.txt  gradle.properties  gradlew  local.properties  push_done.txt  settings.gradle.kts  sync-log.md  进度同步_20260713_0640.m d
.git-sync-logs/: 2026-07-13-1719.json  sync-report-2026-07-13-1816.txt  sync-report-2026-07-13.txt
.github/workflows/: build.yml
01_基础/: 001_CAD基础.md  训练07_住宅平面图.dxf
02_命令/: 001_CAD命令手册.md  每日训练_课程表.txt  训练_每日命令.py
03_规范/: 001_制图规范.md  规范修复器.py  规范检查器.py
04_实战案例/: README.md
04_实战案例/住宅改造/: A立面_电视背景墙.dxf  B立面_开放式厨房.dxf  C立面_卫生间.dxf  D立面_衣帽间.dxf  拆砌墙图.dxf  生成拆砌墙图.py  生成立面_节点图.py  项目信息.md
05_自动化/: 001_自动化路线图.md  DXF_兼容性规则.md  lb_dxf_engine.py  training_001_export_with_ezdxf.sh  training_001_extract_second_floor.py  training_001_fix_dxf.py  training_001_fix_dxf_v2.py  training_001_fix_dxf_v3.py  training_001_parse_second_floor.py  training_001_raw_extract.py  训练_批量解析.py
06_知识库/: README.md
07_专属标准/: 01_图层标准.md  02_文字规范.md  03_标注规范.md  04_颜色规范.md  05_线宽规范.md  06_打印样式.md  07_门窗图库.md  08_家具图库.md  09_节点图库.md  10_标题栏图框.md  README.md
08_每周训练/: CAD_双端深度学习计划.md  README.md
app/: build.gradle.kts
decisions/: 2026-07-07_project_reset.md
docs/: JNI_桥接骨架文件草案.md  LBM_UI_Design_Constitution_v1.0.md  MACBOOK_BUILD.md  OpenCV_CPP_原生函数草案.md  OpenCV_JNI_接口签名草案.md  原型字段与裁切接入.md  原型结果展示流.md  导出裁切联动说明.md  工程总索引.md  工程拆分说明.md  布局接线说明.md  当前状态总报告.md  接口调用顺序.md  最小Android编译结构清单.md  状态回写时序说明.md  真实OpenCV_JNI_第一段实现草案.md  真实OpenCV_JNI_第二段伪代码草案.md  简约UI草案.md  预览页完整字段样式模板.md
stitch-core/: CMakeLists.txt  build.gradle.kts
stitch-core/src/main/cpp/: CMakeLists.txt  NativeBridge.cpp  OpenCvStitchSession.cpp  OpenCvStitchSession.h  jni_bridge.cpp  native-lib.cpp  stub.cpp
stitch-core/src/main/java/com/lb/stitch/core/: CapturePolicy.kt  FrameCollector.kt  LockController.kt  NativeBridge.kt  OpenCvNativeBridge.kt  OpenCvNativeBridgeStub.kt  OpenCvPipeline.kt  OpenCvStitchAdapter.kt  StitchConfig.kt  StitchFrame.kt  StitchResult.kt
stitch-core/src/main/java/com/teleboost/camera/stitch/: PocResultStore.kt
stitch-export/: build.gradle.kts
stitch-guard/: build.gradle.kts
stitch-ui/: build.gradle.kts
参考/: LB_Master_Sync_每日同步机制_V1.0.md  手机端能力清单.md
(+131 files in other folders)
